--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
+    "axios": "^1.3.1",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.28",
     "vue": "^3.2.13",
